<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/val_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/val_a" />

        <EditText
            android:id="@+id/txt_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/val_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/val_b" />

        <EditText
            android:id="@+id/txt_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="60px"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/inf_result" />

        <TextView
            android:id="@+id/super_result"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30px"
            android:layout_weight="0"
            android:text="@string/act_add"
            android:onClick="my_add_click"
            />

        <Button
            android:id="@+id/buttdiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30px"
            android:layout_weight="0"
            android:text="@string/act_div"
            android:onClick="my_div_click"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttmul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30px"
            android:layout_weight="0"
            android:text="@string/act_mul"
            android:onClick="my_mul_click"
            />

        <Button
            android:id="@+id/buttsub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30px"
            android:layout_weight="0"
            android:text="@string/act_sub"
            android:onClick="my_sub_click"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">
    <Button
        android:id="@+id/cos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30px"
        android:layout_weight="0"
        android:text="Cos"
        android:onClick="my_cos_click"
        />

    <Button
        android:id="@+id/sin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30px"
        android:layout_weight="0"
        android:text="Sin"
        android:onClick="my_sin_click"
        />

        <Button
            android:id="@+id/tan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30px"
            android:layout_weight="0"
            android:text="Tan"
            android:onClick="my_tan_click"
            />
    </LinearLayout>
</LinearLayout>